welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: '(' expected but identifier found.
if estFaceMur() {
   ^Program:8: error: illegal start of simple expression
	}
        ^